--- a/TAPIS/configs/GraSP/TAPIS_PHASES.yaml
+++ b/TAPIS/configs/GraSP/TAPIS_PHASES.yaml
@@ -80,11 +80,11 @@ MODEL:
   DROPOUT_RATE: 0.5
 TASKS:
   TASKS:  ["phases"]
-  NUM_CLASSES: [11]
+  NUM_CLASSES: [28]
   LOSS_FUNC: ["cross_entropy"]
   HEAD_ACT:  ["softmax"]
   LOSS_WEIGHTS:  [1.0] 
-  METRICS: ["mAP"]  
+  METRICS: ["f-score"]  
 DATA_LOADER:
   NUM_WORKERS: 5
   PIN_MEMORY: True
